# CreativePatterns

./: Main.cpp  README.md
Abstract-Factory/: AbstractFactory.hpp  AbstractProductA.hpp  AbstractProductB.hpp  ConcreteFactory1.hpp  ConcreteFactory2.hpp  ConcreteProductA1.hpp  ConcreteProductA2.hpp  ConcreteProductB1.hpp  ConcreteProductB2.hpp  main.cpp
Builder/: main.cpp
Builder/include/: Computer.hpp  ComputerBuilder.hpp  ConcreteComputerBuilder.hpp  StorageType.hpp
Builder/src/: Computer.cpp  ConcreteComputerBuilder.cpp
ConcretPatterns/: Guerreiro.cpp  Guerreiro.h  Mago.cpp  Mago.h  Ninja.cpp  Ninja.h
Factory/: main.cpp
Game/: Game.cpp  Game.h
Injection-Dependency/: CMakeLists.txt  main.cpp
Injection-Dependency/Concret-Service/: EletricEngine.h  PetrolEngine.h
Injection-Dependency/Receptor/: HyperCar.cpp  HyperCar.h
Injection-Dependency/Service/: IEngine.h
Prototype/: CMakeLists.txt
Prototype/ConcretPatterns/: Guerreiro.cpp  Guerreiro.h  Mago.cpp  Mago.h  Ninja.cpp  Ninja.h
Prototype/Game/: Game.cpp
Prototype/pattern/: Prototype.h
Singleton/: HowToRun.md  main.cpp
Singleton/connection/: Connection.cpp  Connection.h
