add_executable(new_target Main.cpp
        pattern/Prototype.h
        ConcretPatterns/Guerreiro.h
        ConcretPatterns/Guerreiro.cpp
        ConcretPatterns/Mago.h
        ConcretPatterns/Mago.cpp
        Game/Game.h
        Game/Game.cpp
        ConcretPatterns/Ninja.h
        ConcretPatterns/Ninja.cpp)
